Address code review comments: remove dead code, rename main class, add comprehensive tests, update documentation